# SuperCtx

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MARKETPLACE_READINESS.md  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.ctx/: .gitignore  SUPERCTX.md  manifest.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  claude.yml
architecture/: hub-and-shim.md
data/: conventions.toml
docs/superpowers/plans/: 2026-06-01-add-command.md
docs/superpowers/specs/: 2026-06-01-add-command-design.md
examples/demo-python-project/: AGENTS.md  CLAUDE.md  GEMINI.md  README.md
examples/demo-python-project/src/demo_app/: __init__.py
examples/demo-python-project/tests/: test_demo_app.py
hooks/: hooks.json  pre-tool-use  pre-user-prompt  session-start
scripts/superctx/: __init__.py  __main__.py  _detect.py  add.py  conventions.toml  core.py  guard.py  init.py  registry.py  shim.py  status.py  sync.py  toml_compat.py
skills/add/: SKILL.md
skills/init/: SKILL.md
skills/setup/: SKILL.md
skills/status/: SKILL.md
skills/superctx-init/: SKILL.md
skills/superctx-status/: SKILL.md
skills/superctx-sync/: SKILL.md
skills/sync/: SKILL.md
skills/using-superctx/: SKILL.md
tests/: conftest.py  test_engine.py  test_guard.py  test_mvp_snapshots.py  test_polish.py  test_shim.py
tests/snapshots/demo-python-project/: SUPERCTX.md  manifest.toml
