[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "superctx"
version = "0.1.3"
description = "Cross-tool project context synchronization"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "ShiningLab" }
]
keywords = ["context", "sync", "agents", "claude", "codex", "gemini"]
dependencies = [
  "tomli >= 2.0 ; python_version < '3.11'"
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
superctx = "superctx.__main__:main"

[tool.setuptools]
package-dir = { "" = "scripts" }

[tool.setuptools.packages.find]
where = ["scripts"]

[tool.setuptools.package-data]
superctx = ["conventions.toml"]
